Added client feedbacks

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <div class="wrapper">
 	<!--header-->
 	<header id="header">
-	<div class="carousel fade-carousel slide" data-ride="carousel" data-interval="7000" id="bs-carousel">
+ <div class="carousel fade-carousel slide" data-ride="carousel" data-interval="7000" id="bs-carousel">
   <!-- Overlay -->
   <div class="overlay"></div>
 
@@ -452,6 +452,7 @@
           <li data-target="#quote-carousel" data-slide-to="0" class="active"></li>
           <li data-target="#quote-carousel" data-slide-to="1"></li>
           <li data-target="#quote-carousel" data-slide-to="2"></li>
+          <li data-target="#quote-carousel" data-slide-to="3"></li>
         </ol>
 
         <!-- Carousel Slides / Quotes -->
@@ -465,7 +466,7 @@
                   <img class="img-circle" src="img/client_photos/IMG-20160601-WA0002.jpg" style="width: 100px;height:100px;">
                 </div>
                 <div class="col-sm-9">
-                  <p>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit!</p>
+                  <p>Really I had very delicious food at Sandy's Biryani. Good quality and taste is consistent. Non-veg lovers must visit.</p>
                   <small>Dinesh</small>
                 </div>
               </div>
@@ -476,16 +477,30 @@
             <blockquote>
               <div class="row">
                 <div class="col-sm-3 text-center">
-                  <img class="img-circle" src="img/client_photos/IMG-20160601-WA0001.jpg" style="width: 100px;height:100px;">
+                  <img class="img-circle" src="img/client_photos/Amjad.jpg" style="width: 100px;height:100px;">
                 </div>
                 <div class="col-sm-9">
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam auctor nec lacus ut tempor. Mauris.</p>
-                  <small>Shrinivas</small>
+                  <p>Chicken made by Sandy's is the best dish I ever enjoyed! Specially the Chicken Curry which is prepared in one of our family functions.</p>
+                  <small>Amjad</small>
                 </div>
               </div>
             </blockquote>
           </div>
           <!-- Quote 3 -->
+          <div class="item">
+            <blockquote>
+              <div class="row">
+                <div class="col-sm-3 text-center">
+                  <img class="img-circle" src="img/client_photos/IMG-20160601-WA0001.jpg" style="width: 100px;height:100px;">
+                </div>
+                <div class="col-sm-9">
+                  <p>I know sandy's from many years and I am a big fan of his cooking. I can say that cooking is their passion.</p>
+                  <small>Shrinivas</small>
+                </div>
+              </div>
+            </blockquote>
+          </div>
+          <!-- Quote 4 -->
           <div class="item">
             <blockquote>
               <div class="row">
