--- a/index.html
+++ b/index.html
@@ -55,7 +55,9 @@
             <h3>100% Premium Quality</h3>
         </hgroup>
         <a class="btn btn-hero btn-lg" href="#service">Sandy's Biryani</a>
+         <div><h4 align="right"><img  src="img/other_images/phone_withoutbg.png" width="25" height="25"/><font color="white"> 7040454544 / 7040454549 / 7040664041</font></h4></div>
       </div>
+     
     </div>
     <div class="item slides">
       <div class="slide-2"></div>
@@ -66,6 +68,7 @@
             <h3>Food Cooked On Traditional Stove (Chulha)</h3>
         </hgroup>
         <a class="btn btn-hero btn-lg" href="#service">Sandy's Tandoori</a>
+        <div><h4 align="right"><img  src="img/other_images/phone_withoutbg.png" width="25" height="25"/><font color="white"> 7040454544 / 7040454549 / 7040664041</font></h4></div>
       </div>
     </div>
     <div class="item slides">
@@ -77,6 +80,7 @@
             <h3>no compromise with food quality & no preservatives or chemical color </h3>
         </hgroup>
         <a class="btn btn-hero btn-lg" href="#service">Sandy's Curry</a>
+        <div><h4 align="right"><img  src="img/other_images/phone_withoutbg.png" width="25" height="25"/><font color="white"> 7040454544 / 7040454549 / 7040664041</font></h4></div>
       </div>
     </div>
   </div>
@@ -232,6 +236,8 @@
 		  <div class="heading">
 			<h2>Our Menu</h2>
 			<h3>For authentic taste we cook food on traditional stove in long-established way.</h3>
+			<h5>To place your order please call us on &nbsp;&nbsp;<img  src="img/other_images/phone_withoutbg.png" width="25" height="25"/> 7040454544 / 7040454549 / 7040664041</h5>
+			<h6>Order Timings: 12 p.m. to 2 p.m. <b>and</b> 6 p.m. to 9 p.m.</h6>
 		</div>
 
 			<div id="grid-gallery" class="grid-gallery">
@@ -431,6 +437,10 @@
 					</section><!-- // end slideshow -->
 
 				</div><!-- // grid-gallery -->
+				<div class="heading">
+				<h3></h3>
+				<h5>To place your order please call us on &nbsp;&nbsp;<img  src="img/other_images/phone_withoutbg.png" width="25" height="25"/> 7040454544 / 7040454549 / 7040664041</h5>
+				</div>
 			</div>
 	</section>
 
