Added rate card

--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
 	<section class="gallery page-section" id="gallery">
 		<div class="container">
 		  <div class="heading">
-			<h2>Our Menu</h2>
+			<h2>Sandy's Menu</h2>
 			<h3>For authentic taste we cook food on traditional stove in long-established way.</h3>
 			<h5>To place your order please call us on &nbsp;&nbsp;<img  src="img/other_images/phone_withoutbg.png" width="25" height="25"/> 7040454544 / 7040454549 / 7040664041</h5>
 			<h6>Order Timings: 12 p.m. to 2 p.m. <b>and</b> 6 p.m. to 9 p.m.</h6>
@@ -277,7 +277,7 @@
 							</li>
 							<li>
 								<figure>
-									<img src="img/gallery/img6.jpg" alt=""/>
+									<img src="img/gallery/Chicken_hara_magic.jpg" alt=""/>
 									<figcaption><h3>Chicken Hara Magic</h3></figcaption>
 								</figure>
 							</li>
@@ -341,14 +341,16 @@
 								<figure>
 									<img src="img/gallery/ChickenBiryani.jpg" alt=""/>
 									<figcaption><h3>Chicken Dum Biryani</h3>
-									<p>Authentic Hyderabadi Dum Biryani. Serving with complementary Mirchi ka Salan.</p></figcaption>
+									<p>Authentic Hyderabadi Dum Biryani. Serving with complementary Mirchi ka Salan.
+									<br>Single: 140/-, Double: 275/-, Jambo: 405/-, Family pack: 680/-, 1 kg pack: 810/-</p></figcaption>
 								</figure>
 							</li>
 							<li>
 								<figure>
 									<img src="img/gallery/MuttonBiryani.jpg" alt=""/>
 									<figcaption><h3>Mutton Dum Biryani</h3>
-									<p>Authentic Hyderabadi Dum Biryani. Serving with complementary Mirchi ka Salan.</p></figcaption>
+									<p>Authentic Hyderabadi Dum Biryani. Serving with complementary Mirchi ka Salan.
+									<br>Single: 190/-, Double: 355/-, Jambo: 525/-, Family pack: 865/-, 1 kg pack: 1050/-</p></figcaption>
 								</figure>
 							</li>
 							<li>
@@ -372,7 +374,7 @@
 							</li>
 							<li>
 								<figure>
-									<img src="img/gallery/img6.jpg" alt=""/>
+									<img src="img/gallery/Chicken_hara_magic.jpg" alt=""/>
 									<figcaption><h3>Chicken Hara Magic</h3><p>This is our best seller special chicken dish made up of green chillies.</p></figcaption>
 								</figure>
 							</li>
@@ -441,6 +443,7 @@
 				<h3></h3>
 				<h5>To place your order please call us on &nbsp;&nbsp;<img  src="img/other_images/phone_withoutbg.png" width="25" height="25"/> 7040454544 / 7040454549 / 7040664041</h5>
 				</div>
+				<div align="center"><img src="img/gallery/rateCard.jpg"></div>
 			</div>
 	</section>
 
@@ -450,8 +453,7 @@
 		<div class="heading">
 
 			<h2>What Our Client Say</h2>
-
-			<h3>Feed back from few of our regular clients. They contacted us through email, posting their feedbacks here.</h3>
+			<h3>Feed back from few of our regular clients. They contacted us through email, posting their feedbacks here.</h3>			
 		</div>
 
   <div class='row'>
