Separated gallery and menu sections

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <h3>100% Premium Quality</h3>
         </hgroup>
         <a class="btn btn-hero btn-lg" href="#service">Sandy's Biryani</a>
-         <div><h4 align="right"><img  src="img/other_images/phone_withoutbg.png" width="25" height="25"/><font color="white"> 7040454544 / 7040454549 / 7040664041</font></h4></div>
+         <div><h4 align="right"><img  src="img/other_images/phone_withoutbg.png" width="25" height="25"/><font color="white"> 7040454544 / 7040454549 </font></h4></div>
       </div>
      
     </div>
@@ -68,7 +68,7 @@
             <h3>Food Cooked On Traditional Stove (Chulha)</h3>
         </hgroup>
         <a class="btn btn-hero btn-lg" href="#service">Sandy's Tandoori</a>
-        <div><h4 align="right"><img  src="img/other_images/phone_withoutbg.png" width="25" height="25"/><font color="white"> 7040454544 / 7040454549 / 7040664041</font></h4></div>
+        <div><h4 align="right"><img  src="img/other_images/phone_withoutbg.png" width="25" height="25"/><font color="white"> 7040454544 / 7040454549 </font></h4></div>
       </div>
     </div>
     <div class="item slides">
@@ -80,7 +80,7 @@
             <h3>no compromise with food quality & no preservatives or chemical color </h3>
         </hgroup>
         <a class="btn btn-hero btn-lg" href="#service">Sandy's Curry</a>
-        <div><h4 align="right"><img  src="img/other_images/phone_withoutbg.png" width="25" height="25"/><font color="white"> 7040454544 / 7040454549 / 7040664041</font></h4></div>
+        <div><h4 align="right"><img  src="img/other_images/phone_withoutbg.png" width="25" height="25"/><font color="white"> 7040454544 / 7040454549 </font></h4></div>
       </div>
     </div>
   </div>
@@ -97,7 +97,8 @@
 			  <li><a href="#header" class="scroll-link">Home</a></li>
 			  <li><a href="#service" class="scroll-link">Our Services</a></li>
 			  <li><a href="#aboutUs" class="scroll-link">About Us</a></li>
-			  <li><a href="#gallery" class="scroll-link">Menu</a></li>
+			  <li><a href="#gallery" class="scroll-link">Gallery</a></li>
+			  <li><a href="#menu" class="scroll-link">Menu</a></li>
 			  <li><a href="#feedback" class="scroll-link">Feedback</a></li>
 			  <li><a href="#contact" class="scroll-link">Contact</a></li>
 			</ul>
@@ -230,16 +231,15 @@
 	</div>
 	</section>
 
-	<!--Menu-->
+	<!--Gallery-->
 	<section class="gallery page-section" id="gallery">
 		<div class="container">
-		  <div class="heading">
-			<h2>Sandy's Menu</h2>
+		<div class="heading">
+			<!--<h2>Sandy's Menu</h2>-->
 			<h3>For authentic taste we cook food on traditional stove in long-established way.</h3>
-			<h5>To place your order please call us on &nbsp;&nbsp;<img  src="img/other_images/phone_withoutbg.png" width="25" height="25"/> 7040454544 / 7040454549 / 7040664041</h5>
+			<h5>To place your order please call us on &nbsp;&nbsp;<img  src="img/other_images/phone_withoutbg.png" width="25" height="25"/> 7040454544 / 7040454549 </h5>
 			<h6>Order Timings: 12 p.m. to 2 p.m. <b>and</b> 6 p.m. to 9 p.m.</h6>
 		</div>
-
 			<div id="grid-gallery" class="grid-gallery">
 
 					<section class="grid-wrap">
@@ -441,10 +441,27 @@
 				</div><!-- // grid-gallery -->
 				<div class="heading">
 				<h3></h3>
-				<h5>To place your order please call us on &nbsp;&nbsp;<img  src="img/other_images/phone_withoutbg.png" width="25" height="25"/> 7040454544 / 7040454549 / 7040664041</h5>
+				<h5>To place your order please call us on &nbsp;&nbsp;<img  src="img/other_images/phone_withoutbg.png" width="25" height="25"/> 7040454544 / 7040454549 </h5>
 				</div>
-				<div align="center"><img src="img/gallery/rateCard.jpg"></div>
 			</div>
+	</section>
+	
+	<!--Menu-->
+	<section class="gallery page-section" id="menu">
+		<div class="container">
+		<div class="heading">
+			<h2>Sandy's Menu</h2>
+			<h3>For authentic taste we cook food on traditional stove in long-established way.</h3>
+			<h5>To place your order please call us on &nbsp;&nbsp;<img  src="img/other_images/phone_withoutbg.png" width="25" height="25"/> 7040454544 / 7040454549 </h5>
+			<h6>Order Timings: 12 p.m. to 2 p.m. <b>and</b> 6 p.m. to 9 p.m.</h6>
+			
+		</div>
+			<div align="center"><img src="img/gallery/rateCard.jpg"></div>
+			<div class="heading">
+				<h3></h3>
+				<h5>To place your order please call us on &nbsp;&nbsp;<img  src="img/other_images/phone_withoutbg.png" width="25" height="25"/> 7040454544 / 7040454549 </h5>
+			</div>
+		</div>
 	</section>
 
 	<!--feedback-->
@@ -452,8 +469,8 @@
 	<div class="container">
 		<div class="heading">
 
-			<h2>What Our Client Say</h2>
-			<h3>Feed back from few of our regular clients. They contacted us through email, posting their feedbacks here.</h3>			
+			<h2>What Our Customers Say</h2>
+			<h3>Feed back from few of our regular customers. They contacted us through email, posting their feedbacks here.</h3>			
 		</div>
 
   <div class='row'>
@@ -550,7 +567,7 @@
 				    <td align="center"><img src="img/other_images/email2.png" width="50" height="50" /></td> 
 				  </tr>
 				  <tr>
-				    <td>7040454544 / 7040454549 / 7040664041</td>
+				    <td>7040454544 / 7040454549 </td>
 				    <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
 				    <td>sandysbiryani@gmail.com</td> 
 				  </tr>
