--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
 		<div class="heading">
 			<!--<h2>Sandy's Menu</h2>-->
 			<h3>For authentic taste we cook food on traditional stove in long-established way.</h3>
-			<h5>To place your order please call us on &nbsp;&nbsp;<img  src="img/other_images/phone_withoutbg.png" width="25" height="25"/> 7040454544 / 7040454549 </h5>
+			<h5>To place your order please call us </h5><h6>&nbsp;&nbsp;<img  src="img/other_images/phone_withoutbg.png" width="25" height="25"/> 7040454544 (Warje, Karve Nagar, Kothrud) / <img  src="img/other_images/phone_withoutbg.png" width="25" height="25"/> 7040454549 (Sangvi, Pimple-saudagar, Pimple-gurav)</h6>
 			<h6>Order Timings: 12 p.m. to 2 p.m. <b>and</b> 6 p.m. to 9 p.m.</h6>
 		</div>
 			<div id="grid-gallery" class="grid-gallery">
@@ -441,7 +441,7 @@
 				</div><!-- // grid-gallery -->
 				<div class="heading">
 				<h3></h3>
-				<h5>To place your order please call us on &nbsp;&nbsp;<img  src="img/other_images/phone_withoutbg.png" width="25" height="25"/> 7040454544 / 7040454549 </h5>
+				<h6>&nbsp;&nbsp;<img  src="img/other_images/phone_withoutbg.png" width="25" height="25"/> 7040454544 (Warje, Karve Nagar, Kothrud) / <img  src="img/other_images/phone_withoutbg.png" width="25" height="25"/> 7040454549 (Sangvi, Pimple-saudagar, Pimple-gurav)</h6>
 				</div>
 			</div>
 	</section>
@@ -451,15 +451,15 @@
 		<div class="container">
 		<div class="heading">
 			<h2>Sandy's Menu</h2>
-			<h3>For authentic taste we cook food on traditional stove in long-established way.</h3>
-			<h5>To place your order please call us on &nbsp;&nbsp;<img  src="img/other_images/phone_withoutbg.png" width="25" height="25"/> 7040454544 / 7040454549 </h5>
+			<h5>To place your order please call us </h5><h6>&nbsp;&nbsp;<img  src="img/other_images/phone_withoutbg.png" width="25" height="25"/> 7040454544 (Warje, Karve Nagar, Kothrud) / <img  src="img/other_images/phone_withoutbg.png" width="25" height="25"/> 7040454549 (Sangvi, Pimple-saudagar, Pimple-gurav)</h6>
 			<h6>Order Timings: 12 p.m. to 2 p.m. <b>and</b> 6 p.m. to 9 p.m.</h6>
-			
+			<h3></h3>
 		</div>
+		
 			<div align="center"><img src="img/gallery/rateCard.jpg"></div>
 			<div class="heading">
 				<h3></h3>
-				<h5>To place your order please call us on &nbsp;&nbsp;<img  src="img/other_images/phone_withoutbg.png" width="25" height="25"/> 7040454544 / 7040454549 </h5>
+					<h5>To place your order please call us </h5><h6>&nbsp;&nbsp;<img  src="img/other_images/phone_withoutbg.png" width="25" height="25"/> 7040454544 (Warje, Karve Nagar, Kothrud) / <img  src="img/other_images/phone_withoutbg.png" width="25" height="25"/> 7040454549 (Sangvi, Pimple-saudagar, Pimple-gurav)</h6>
 			</div>
 		</div>
 	</section>
