--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
       <img align="left" src="img/logo.png" alt="logo"/>
       <hgroup>
 		    <h1>Tasty, Hygienic and Quality Food</h1>
-            <h3>no compromise with food quality & no preservatives or chemical color </h3>
+            <h3>no compromise with food quality & no preservatives or synthetic food color </h3>
         </hgroup>
         <a class="btn btn-hero btn-lg" href="#service">Sandy's Curry</a>
         <div><h4 align="right"><img  src="img/other_images/phone_withoutbg.png" width="25" height="25"/><font color="white"> 7040454544 / 7040454549 </font></h4></div>
@@ -158,7 +158,7 @@
 	           </div>
 	           <p>*</p>
 	           <div>
-	           	We do not use preservatives or chemical food color.
+	           	We do not use preservatives or synthetic food color.
 	           </div>
 	           <p>*</p>
 	           <div>
@@ -238,7 +238,7 @@
 			<!--<h2>Sandy's Menu</h2>-->
 			<h3>For authentic taste we cook food on traditional stove in long-established way.</h3>
 			<h5>To place your order please call us </h5><h6>&nbsp;&nbsp;<img  src="img/other_images/phone_withoutbg.png" width="25" height="25"/> 7040454544 (Warje, Karve Nagar, Kothrud) / <img  src="img/other_images/phone_withoutbg.png" width="25" height="25"/> 7040454549 (Sangvi, Pimple-saudagar, Pimple-gurav)</h6>
-			<h6>Order Timings: 12 p.m. to 2 p.m. <b>and</b> 6 p.m. to 9 p.m.</h6>
+			<h6>Order Timings: 12 p.m. to 2 p.m. <b>and</b> 6 p.m. to 9 p.m.</h6> 
 		</div>
 			<div id="grid-gallery" class="grid-gallery">
 
