--- a/index.html
+++ b/index.html
@@ -572,10 +572,9 @@
 				    <td>sandysbiryani@gmail.com</td> 
 				  </tr>
 				</table>
-				<h3></h3>
-		</div>
+			</div>
 	</div>
-	 <div class="container w960">
+	<!--  <div class="container w960">
       <div class="row">
 		<div class="done">
 			<div class="alert alert-success">
@@ -590,7 +589,7 @@
           <input type="submit" id="submit" class="contact submit" value="Send message">
         </form>
       </div>
-    </div>
+    </div> -->
 	</section>
 
 	<!--footer-->
@@ -600,11 +599,11 @@
 	</p>
 	<div class="container">
 		<ul>
-			<li><a href="#"><i class="fa fa-twitter"></i></a></li>
+			<!--<li><a href="#"><i class="fa fa-twitter"></i></a></li>-->
 			<li><a href="https://www.facebook.com/sandysbiryani/?fref=ts"><i class="fa fa-facebook"></i></a></li>
-			<li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+			<!--<li><a href="#"><i class="fa fa-linkedin"></i></a></li>
 			<li><a href="#"><i class="fa fa-pinterest"></i></a></li>
-			<li><a href="#"><i class="fa fa-flickr"></i></a></li>
+			<li><a href="#"><i class="fa fa-flickr"></i></a></li>-->
 		</ul>
 		<p>
 			&copy; 2015 Copyright Your Website Template by <a href="http://webthemez.com">Webthemez.com</a>
