--- a/index.html
+++ b/index.html
@@ -470,7 +470,7 @@
 		<div class="heading">
 
 			<h2>What Our Customers Say</h2>
-			<h3>Feed back from few of our regular customers. They contacted us through email, posting their feedbacks here.</h3>			
+			<h3>Feed back from few of our regular customers. They contacted us through email, posted their feedbacks here.</h3>			
 		</div>
 
   <div class='row'>
@@ -551,6 +551,22 @@
 
 
 	</div>
+	<section class="footer" id="footer">
+		<p class="text-center">
+			<a href="#header" class="gototop"><i class="fa fa-angle-double-up fa-2x"></i></a>
+		</p>
+		<div class="container">
+			<p>Post your feedbacks on our facebook page</p>
+			<ul>
+				<!--<li><a href="#"><i class="fa fa-twitter"></i></a></li>-->
+				<li><a href="https://www.facebook.com/sandysbiryani/?fref=ts"><i class="fa fa-facebook"></i></a></li>
+				<!--<li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+				<li><a href="#"><i class="fa fa-pinterest"></i></a></li>
+				<li><a href="#"><i class="fa fa-flickr"></i></a></li>-->
+			</ul>
+		</div>
+	</section>
+
 	</section>
 
 	<!--feedback-->
