Updated contact number of Palama branch

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <h3>100% Premium Quality</h3>
         </hgroup>
         <a class="btn btn-hero btn-lg" href="#service">Sandy's Biryani</a>
-         <!--<div><h4 align="right"><img  src="img/other_images/phone_withoutbg.png" width="25" height="25"/><font color="white"> 8999965579 / 9766666292 / 9604785944 </font></h4></div>-->
+         <!--<div><h4 align="right"><img  src="img/other_images/phone_withoutbg.png" width="25" height="25"/><font color="white"> 8999965579 / 7678051585 </font></h4></div>-->
       </div>
      
     </div>
@@ -68,7 +68,7 @@
             <h3>Food Cooked On Traditional Stove (Chulha)</h3>
         </hgroup>
         <a class="btn btn-hero btn-lg" href="#service">Sandy's Barbeque</a>
-        <!--<div><h4 align="right"><img  src="img/other_images/phone_withoutbg.png" width="25" height="25"/><font color="white"> 8999965579 / 9766666292 / 9604785944 </font></h4></div>-->
+        <!--<div><h4 align="right"><img  src="img/other_images/phone_withoutbg.png" width="25" height="25"/><font color="white"> 8999965579 / 7678051585 </font></h4></div>-->
       </div>
     </div>
     <div class="item slides">
@@ -80,7 +80,7 @@
             <h3>no compromise with food quality & no preservatives or synthetic food color </h3>
         </hgroup>
         <a class="btn btn-hero btn-lg" href="#service">Sandy's Curry</a>
-        <!--<div><h4 align="right"><img  src="img/other_images/phone_withoutbg.png" width="25" height="25"/><font color="white"> 8999965579 / 9766666292 / 9604785944 </font></h4></div>-->
+        <!--<div><h4 align="right"><img  src="img/other_images/phone_withoutbg.png" width="25" height="25"/><font color="white"> 8999965579 / 7678051585 </font></h4></div>-->
       </div>
     </div>
   </div>
@@ -233,7 +233,7 @@
 		<div class="heading">
 			<!--<h2>Sandy's Menu</h2>-->
 			<h3>For authentic taste we cook food on traditional stove in long-established way.</h3>
-			<h5>To place your order please call us </h5><h6>&nbsp;&nbsp;<img  src="img/other_images/phone_withoutbg.png" width="25" height="25"/> 8999965579 (Warje, Pune)  <img  src="img/other_images/phone_withoutbg.png" width="25" height="25"/> 9766666292 / 9604785944 (Khoni Palava City, Dombiwili-Kalyan, Thane, Mumbai)</h6>
+			<h5>To place your order please call us </h5><h6>&nbsp;&nbsp;<img  src="img/other_images/phone_withoutbg.png" width="25" height="25"/> 8999965579 (Warje, Pune)  <img  src="img/other_images/phone_withoutbg.png" width="25" height="25"/> 7678051585 (Khoni Palava City, Dombiwili-Kalyan, Thane, Mumbai)</h6>
 			<h6>Order Timings: 12 p.m. to 2 p.m. <b>and</b> 6 p.m. to 9 p.m.</h6> 
 		</div>
 			<div id="grid-gallery" class="grid-gallery">
@@ -689,7 +689,7 @@
 				</div><!-- // grid-gallery -->
 				<div class="heading">
 				<h3></h3>
-				<h6>&nbsp;&nbsp;<img  src="img/other_images/phone_withoutbg.png" width="25" height="25"/> 8999965579 (Warje, Pune)  <img  src="img/other_images/phone_withoutbg.png" width="25" height="25"/> 9766666292 / 9604785944 (Khoni Palava City, Dombiwili-Kalyan, Thane, Mumbai)</h6>
+				<h6>&nbsp;&nbsp;<img  src="img/other_images/phone_withoutbg.png" width="25" height="25"/> 8999965579 (Warje, Pune)  <img  src="img/other_images/phone_withoutbg.png" width="25" height="25"/> 7678051585 (Khoni Palava City, Dombiwili-Kalyan, Thane, Mumbai)</h6>
 				</div>
 			</div>
 	</section>
@@ -699,7 +699,7 @@
 		<div class="container">
 		<div class="heading">
 			<h2>Sandy's Menu</h2>
-			<h5>To place your order please call us </h5><h6>&nbsp;&nbsp;<img  src="img/other_images/phone_withoutbg.png" width="25" height="25"/> 8999965579 (Warje, Pune)  <img  src="img/other_images/phone_withoutbg.png" width="25" height="25"/> 9766666292 / 9604785944 (Khoni Palava City, Dombiwili-Kalyan, Thane, Mumbai)</h6>
+			<h5>To place your order please call us </h5><h6>&nbsp;&nbsp;<img  src="img/other_images/phone_withoutbg.png" width="25" height="25"/> 8999965579 (Warje, Pune)  <img  src="img/other_images/phone_withoutbg.png" width="25" height="25"/> 7678051585 (Khoni Palava City, Dombiwili-Kalyan, Thane, Mumbai)</h6>
 			<h6>Order Timings: 12 p.m. to 2 p.m. <b>and</b> 6 p.m. to 9 p.m.</h6>
 			<h3></h3>
 		</div>
@@ -707,7 +707,7 @@
 			<div align="center"><img src="img/gallery/rateCard.jpg"></div>
 			<div class="heading">
 				<h3></h3>
-					<h5>To place your order please call us </h5><h6>&nbsp;&nbsp;<img  src="img/other_images/phone_withoutbg.png" width="25" height="25"/> 8999965579 (Warje, Pune)  <img  src="img/other_images/phone_withoutbg.png" width="25" height="25"/> 9766666292 / 9604785944 (Khoni Palava City, Dombiwili-Kalyan, Thane, Mumbai)</h6>
+					<h5>To place your order please call us </h5><h6>&nbsp;&nbsp;<img  src="img/other_images/phone_withoutbg.png" width="25" height="25"/> 8999965579 (Warje, Pune)  <img  src="img/other_images/phone_withoutbg.png" width="25" height="25"/> 7678051585 (Khoni Palava City, Dombiwili-Kalyan, Thane, Mumbai)</h6>
 			</div>
 		</div>
 	</section>-->
@@ -861,7 +861,7 @@
 				    <td align="center"><img src="img/other_images/email2.png" width="50" height="50" /></td> 
 				  </tr>
 				  <tr>
-				    <td>8999965579 / 9766666292 / 9604785944 </td>
+				    <td>8999965579 / 7678051585 </td>
 				    <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
 				    <td>sandysbiryani@gmail.com</td> 
 				  </tr>
